--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="N0">#FFFFFF</color>
+    <color name="M100">#F3EDFF</color>
+    <color name="M600">#7145D6</color>
+    <color name="M800">#2C2643</color>
+    <color name="Y400">#FFD36B</color>
 </resources>
