--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="N0">#FFFFFF</color>
     <color name="M100">#F3EDFF</color>
+    <color name="M200">#E8DEFF</color>
     <color name="M600">#7145D6</color>
     <color name="M800">#2C2643</color>
     <color name="Y400">#FFD36B</color>
+    <color name="Black">#000</color>
 </resources>
