Created the cart's product list and added the logic behind the product discounts.

--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -97,7 +97,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            tools:listitem="@layout/item_product" />
+            tools:listitem="@layout/item_product"
+            tools:itemCount="3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
