--- a/app/src/main/res/drawable/ic_mug.xml
+++ b/app/src/main/res/drawable/ic_mug.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M6,4a2,2 0,0 0,-2 2v12a2,2 0,0 0,2 2h7a2,2 0,0 0,2 -2L15,6a2,2 0,0 0,-2 -2L6,4zM16.874,5L18,5a4,4 0,0 1,4 4v3a4,4 0,0 1,-4 4h-1v2a4,4 0,0 1,-4 4L6,22a4,4 0,0 1,-4 -4L2,6a4,4 0,0 1,4 -4h7a4.002,4.002 0,0 1,3.874 3zM17,14h1a2,2 0,0 0,2 -2L20,9a2,2 0,0 0,-2 -2h-1v7z"
-      android:fillColor="#000000"/>
+      android:fillColor="@color/R500"/>
 </vector>
