--- a/app/src/main/res/drawable/ic_voucher.xml
+++ b/app/src/main/res/drawable/ic_voucher.xml
@@ -8,69 +8,69 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/O500"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M20,12H2v4v0c1.7,0 3,1.4 3,3s-1.3,3 -3,3v0v4h18"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/O500"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M23,12L23,14"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/O500"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M23,24L23,26"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/O500"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M8,16L18,16"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/O400"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M13,20L18,20"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/O400"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M22,6L22,8"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/Y500"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M23,17L23,21"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/O500"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M26,8L25,9"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/Y500"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M18,8L19,9"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/Y500"
       android:strokeLineCap="round"/>
 </vector>
